--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ section> .social-midia{
     color: var(--main-color);
     margin: 4rem 1rem 1rem 0;
     transition: .5s ease;
+    text-decoration: none;
 }
 
 .midia-net a:hover{
